# zaguan-sdk-python

./: .gitignore  CHANGELOG.md  Makefile  QWEN.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  test.yml
docs/: ADVANCED_FEATURES.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  ENDPOINTS_ADDED.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  PROVIDER_EXAMPLES.md  PUBLISHING.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.2.0.md  REVIEW_SUMMARY.md  missing.md
examples/: additional_endpoints.py  advanced_features.py  async_chat.py  basic_chat.py
tests/: test_advanced_features.py  test_client.py  test_credits.py  test_error_handling.py  test_models.py  test_package.py  test_streaming.py  test_validation.py
zaguan/: __init__.py  _http.py  async_client.py  client.py  errors.py
zaguan_sdk/: __init__.py  _http.py  async_client.py  client.py  errors.py  models.py  observability.py  retry.py  streaming.py
